[tool.poetry]
name = "compareit"
version = "0.1.0"
description = ""
authors = ["Mahesh <zephyrr2722@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-widget-tweaks = "^1.4.8"
fuzzywuzzy = "^0.18.0"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
python-Levenshtein = "^0.12.2"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
